escapa las tildes

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>Página HTML 5 válida</title>
+  <title>P&aacute;gina HTML 5 v&aacute;lida</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css" title="Color">
 </head>
 
 <body>
-  <p>Esta página es una página HTML 5 válida.</p>
+  <p>Esta p&aacute;gina es una p&aacute;gina HTML 5 v&aacute;lida.</p>
 </body>
 </html>
