--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <h1>Cabecera</h1>
   <p>Esta p&aacute;gina es una p&aacute;gina HTML 5 v&aacute;lida.</p>
+  <p>Otro p&aacute;rrafo</p>
 
 </body>
 </html>
