añado una lista y varios parrafo

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
   <h1>Cabecera</h1>
   <p>Esta p&aacute;gina es una p&aacute;gina HTML 5 v&aacute;lida.</p>
   <p>Otro p&aacute;rrafo</p>
+  <h2>otra cabecera maquinona </h2>
+  <p>parrafito crema </p>
+  <ul>
+    <li>primera </li>
+    <li>segunda</li>
+    <li>tercera</li>
+  </ul>
 
 </body>
 </html>
